<resources>
  <string name="app_name">MVVMDemo</string>

  <string name="dialog_title_alert">Alert</string>
  <string name="dialog_message_login_success">Login Successful</string>
  <string name="dialog_message_registration_success">Registration Successful</string>
  <string name="button_create_account">CREATE ACCOUNT</string>
  <string name="button_login">Login</string>
  <string name="hint_email">Email</string>
  <string name="hint_password">Password</string>
  <string name="label_contact_support">Contact Support</string>
  <string name="error_invalid_field">Field cannot be empty</string>
  <string name="error_invalid_password_length">Password length should be >8 </string>
  <string name="error_invalid_password_chars">Password should contains atleast one Upper char,
    One Number, One Lower char </string>


</resources>
