<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/base_margin"
    android:orientation="vertical"
    android:background="@drawable/background_loginscreen"
    tools:context="com.arkenstone.mvvmdemo.ui.login.LoginActivity"
    >
  <View
      android:layout_width="match_parent"
      android:layout_height="@dimen/dimen_space"
      android:layout_weight="1"

      />

  <ImageView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:src="@drawable/logo"
      />
  <View
      android:layout_width="match_parent"
      android:layout_height="@dimen/dimen_space"
      android:layout_weight="1"
      />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_margin="@dimen/base_margin"

      >
    <EditText
        android:id="@+id/text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        style="@style/EditTextStyle"
        />
    <EditText
        android:id="@+id/text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        style="@style/EditTextStyle"
        />
    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/base_margin"
        android:background="@drawable/background_login"
        android:filterTouchesWhenObscured="true"
        android:text="@string/button_login"
        android:textColor="@color/color_button_text"
        />

    <Button
        android:id="@+id/button_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_create_account"
        android:filterTouchesWhenObscured="true"
        android:text="@string/button_create_account"
        android:textColor="@color/color_button_text"
        />
  </LinearLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="@dimen/dimen_space"
      android:layout_gravity="bottom"
      android:gravity="bottom"
      android:layout_weight="1"
      android:orientation="vertical"
      >
    <TextView
        android:id="@+id/button_support"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:text="@string/label_contact_support"
        android:textColor="@color/color_button_text"
        />
  </LinearLayout>
</LinearLayout>
